Improve test coverage